# Coursework-5sem-

./: CMakeLists.txt  README.md
DataStructures/: PersistentSegmetTree.h  RetroactiveArray.h  RetroactiveArray1_0.h  RetroactiveArray2_0.h  SegmentTree.h  SimpleRetroactiveArray.h  SimpleRetroactiveArray2.h
Metrics/: main.cpp
Tests/: HandwrittenTests.cpp  RetroactiveArray1_0_Tests.cpp  RetroactiveArray2_0_Tests.cpp  SimpleRetroactiveArray2.cpp  TestingFunctions.h  utils.h
Utils/: RandomUtils.cpp  RandomUtils.h  Segment.h  random_utils.h
gtest/: gmock-actions.h  gmock-all.cc  gmock-cardinalities.cc  gmock-cardinalities.h  gmock-function-mocker.h  gmock-generated-actions.h  gmock-generated-function-mockers.h  gmock-generated-matchers.h  gmock-internal-utils.cc  gmock-matchers.cc  gmock-matchers.h  gmock-more-actions.h  gmock-more-matchers.h  gmock-nice-strict.h  gmock-spec-builders.cc  gmock-spec-builders.h  gmock.cc  gmock.h  gmock_main.cc  gtest-all.cc  gtest-death-test.cc  gtest-death-test.h  gtest-filepath.cc  gtest-internal-inl.h  gtest-matchers.cc  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-port.cc  gtest-printers.cc  gtest-printers.h  gtest-spi.h  gtest-test-part.cc  gtest-test-part.h  gtest-typed-test.cc  gtest-typed-test.h  gtest.cc  gtest.h  gtest_main.cc  gtest_pred_impl.h  (+1 more)
gtest/internal/: gmock-internal-utils.h  gmock-port.h  gtest-death-test-internal.h  gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port.h  gtest-string.h  gtest-type-util.h
